example/lib/src/arbs/errors/app_ru.arb
{
  "@@locale": "ru",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Произошла ошибка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Произошла неизвестная ошибка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Отчёт об ошибке успешно отправлен.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}